--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Facebook.
                         e.preventDefault(); // Prevent the default form submission
                         // Perform the redirection to the desired URL
                         window.location.href =
-                            "meta.com"; // Replace with your desired URL
+                            "next.html"; // Replace with your desired URL
                     });
             </script>
         </div>
